--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "nuqs": "^2.4.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.4",
     "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
