--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # PayloadCMS API URL
 NEXT_PUBLIC_SERVER_URL="https://cms.patarutera.pe" # Replace with your actual PayloadCMS API URL
 PREVIEW_SECRET="tokentokentoken"
+NEXT_PUBLIC_PIXEL_ID=971219730544055
 REVALIDATE_TOKEN="tokentokentoken"
 # Example of another variable you might need
