--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
+    "@builder.io/partytown": "^0.10.3",
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@tailwindcss/typography": "^0.5.16",
