--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/third-parties": "^15.4.6",
     "@payloadcms/live-preview-react": "^3.38.0",
     "@payloadcms/richtext-lexical": "^3.37.0",
     "@radix-ui/react-checkbox": "^1.3.1",
