--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.507.0",
-    "motion": "^12.10.0",
+    "motion": "12.10.0",
     "next": "15.3.1",
     "nuqs": "^2.4.3",
     "react": "^19.0.0",
