--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@next/third-parties": "^15.4.6",
     "@payloadcms/live-preview-react": "^3.38.0",
     "@payloadcms/richtext-lexical": "^3.37.0",
@@ -33,13 +34,16 @@
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.507.0",
     "motion": "^12.10.0",
-    "next": "15.3.1",
+    "next": "15.3.4",
+    "node-fetch": "^3.3.2",
     "nuqs": "^2.4.3",
     "react": "^19.0.0",
-    "react-day-picker": "^9.11.0",
+    "react-day-picker": "^9.11.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
-    "tailwind-merge": "^3.2.0"
+    "tailwind-merge": "^3.2.0",
+    "uuid": "^13.0.0",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@builder.io/partytown": "^0.10.3",
@@ -62,7 +66,7 @@
     "eslint-plugin-storybook": "^9.1.3",
     "playwright": "^1.55.0",
     "storybook": "^9.1.3",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.1.5",
     "tw-animate-css": "^1.2.9",
     "typescript": "^5",
     "vitest": "^3.2.4"
