--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@radix-ui/react-slider": "^1.3.5",
     "@radix-ui/react-slot": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@react-email/components": "0.5.6",
+    "@react-email/render": "^1.3.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -37,10 +39,12 @@
     "next": "15.3.4",
     "node-fetch": "^3.3.2",
     "nuqs": "^2.4.3",
+    "prettier": "^3.6.2",
     "react": "^19.0.0",
     "react-day-picker": "^9.11.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
+    "resend": "6.2.0-canary.3",
     "tailwind-merge": "^3.2.0",
     "uuid": "^13.0.0",
     "zod": "^4.1.12"
