--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "lucide-react": "^0.507.0",
     "motion": "^12.10.0",
     "next": "15.3.4",
+    "next-auth": "5.0.0-beta.30",
     "node-fetch": "^3.3.2",
     "nuqs": "^2.4.3",
     "prettier": "^3.6.2",
